[package]
name = "wasm_integration"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = "z"
